syntax = "proto3";
package DataServer;
service DataServer {

  rpc Send (Input) returns (Output) {}

  rpc CallBack (Input) returns (Output) {}
}

message Input {
  string transaction = 1;
  string client = 2;
  string clientAddress = 3;
}

message Output {
  string message = 1;
}